@@ -1,5 +1,7 @@
 package com.careercompass.backend.config;
 
+import com.careercompass.backend.config.properties.AppProperties;
+import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
@@ -12,12 +14,15 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.time.Duration;
 import java.util.Arrays;
-import java.util.List;
 
 @Configuration
 @EnableWebSecurity
+@RequiredArgsConstructor
 public class SecurityConfig {
+    
+    private final AppProperties appProperties;
     
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
@@ -25,7 +30,7 @@ public class SecurityConfig {
             .csrf(csrf -> csrf.disable())
             .cors(cors -> cors.configurationSource(corsConfigurationSource()))
             .authorizeHttpRequests(auth -> auth
-                .requestMatchers("/api/hello", "/api/users/**").permitAll()
+                .requestMatchers("/api/hello", "/api/users/**", "/api/config-examples/**").permitAll()
                 .anyRequest().authenticated()
             )
             .sessionManagement(session -> session
@@ -43,10 +48,13 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("http://localhost:3000"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(List.of("*"));
-        configuration.setAllowCredentials(true);
+        
+        // Using @ConfigurationProperties instead of hardcoded values
+        configuration.setAllowedOrigins(Arrays.asList(appProperties.getCors().getAllowedOrigins()));
+        configuration.setAllowedMethods(Arrays.asList(appProperties.getCors().getAllowedMethods()));
+        configuration.setAllowedHeaders(Arrays.asList(appProperties.getCors().getAllowedHeaders()));
+        configuration.setAllowCredentials(appProperties.getCors().getAllowCredentials());
+        configuration.setMaxAge(Duration.ofSeconds(appProperties.getCors().getMaxAge()));
         
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
